fixing spacing

--- a/express-static-serve/website/src/components/DocumentsPageBasic/DocumentsPage.module.css
+++ b/express-static-serve/website/src/components/DocumentsPageBasic/DocumentsPage.module.css
@@ -18,7 +18,7 @@
   border-radius: 8px;
 }
 
-.fileContainer:first-child {
+.fileContainer:first-of-type {
   margin-top: 0;
 }
 
